k8s/fleet/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackwatch-fe
  labels:
    app: slackwatch-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: slackwatch-fe
  template:
    metadata:
      labels:
        app: slackwatch-fe
    spec:
      containers:
      - name: slackwatch-fe
        image: ghcr.io/slackspace-io/slackwatch-fe:latest
        ports:
        - containerPort: 3000
        env:  # Add this section
        - name: VITE_API_BASE_URL
          value: "http://backend-service:8080/api"
