k8s/fleet/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slackwatch-fe-svc
spec:
  selector:
    app: slackwatch-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
